--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,7 @@ p {
 
 .centered {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    /*width: 40%;*/
+    text-align: center;
 }
 
 .thin-border {
