color change and icon

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ p {
 
 /* Nav Bar Styles */
 .navbar-custom {
-    background-color: #0080ff !important;
+    background-color: #008000 !important;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
@@ -80,7 +80,7 @@ p {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #0080ff!important;
+  background-color: #008000!important;
   color: white !important;
   text-align: center !important;
 }
