--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ p {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 35px;
   background-color: #008000!important;
   color: white !important;
   text-align: center !important;
@@ -141,26 +142,15 @@ p {
     max-width: 300px !important;
 }
 
-.red-container {
-    align-content: center !important;
-    padding: 5px;
-    background-color: red !important;
-    border-radius: 25px;
-    border-style: none;
-    max-width: 300px !important;
-    margin-right: auto;
-    margin-left: auto;
-}
-
 .blue-container {
     align-content: center !important;
     padding: 5px;
     background-color: #e8f4f8 !important;
     border-radius: 25px;
-    border-style: none;
     max-width: 300px !important;
     margin-right: auto;
     margin-left: auto;
+    border-color: blue !important; 
 }
 
 button, input, select, textarea {
